k8s-apps/xwiki/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xwiki-ingress
  namespace: open4goods
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: xwiki.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xwiki
            port:
              number: 8080
